# atlas_transform

./: .gitignore  OPERATIONS.md  README.md  archive_completed.py  atlas_io.py  atlas_paths.py  atlas_runner.sh  atlas_transform.bk.py  atlas_transform.py  due_tasks_review.txt  fillplan.json  fillrequest.json  pyproject.toml  run_atlas.zsh  sample_input.generated.md  sample_input.txt  sample_output.txt  test_overdue_tasks.py
4-RoR/Calendar/Notes/Daily Notes/: 2025-12-22.md  2025-12-23.md
Services/Classifier/: atlas-classification-prompt.txt
Services/Classifier/atlas_dt_classifier/: atlas_dt_classify.py  atlas_dt_import_to_devonthink.py
_TEMP/: atlas_transform-2.4.4.py  test_transform.py
data/backups/: Scratchpad.backup.20251220-082346.md  Scratchpad.backup.20251221-091047.md
data/logs/: atlas_ollama_tags_2025-12-23.json
examples/: atlas_fill_request.example.json
examples/test_vault/: 2025-12-24.md  Scratchpad.md
models/: Modelfile.atlas-fill  Modelfile.atlas_tags  atlas_fill.modelfile
models/ollama/: Modelfile.atlas-task-classifier
scripts/: atlas_dt_pipeline.sh  atlas_dt_run.sh  test_ollama_classifier.sh
src/atlas/: transform.py
src/atlas/tools/: archive_completed.py
